--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,34 @@
+astroid==2.13.2
+black==22.12.0
 click==8.1.3
+colorama==0.4.6
+cssbeautifier==1.14.7
+dill==0.3.6
+djlint==1.19.11
+EditorConfig==0.12.3
 Flask==2.2.2
+html-tag-names==0.1.2
+html-void-elements==0.1.0
+importlib-metadata==6.0.0
+isort==5.11.4
 itsdangerous==2.1.2
 Jinja2==3.1.2
+jsbeautifier==1.14.7
+lazy-object-proxy==1.9.0
 MarkupSafe==2.1.1
+mccabe==0.7.0
+mypy-extensions==0.4.3
+pathspec==0.10.3
+platformdirs==2.6.2
+pylint==2.15.10
 PyMySQL==1.0.2
 python-dotenv==0.21.0
+PyYAML==6.0
+regex==2022.10.31
+six==1.16.0
+tomlkit==0.11.6
+tqdm==4.64.1
+typing_extensions==4.4.0
 Werkzeug==2.2.2
+wrapt==1.14.1
+zipp==3.11.0
