--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,22 @@
-click==8.1.3
+astroid==2.15.6
+black==23.9.1
+click==8.1.7
+dill==0.3.7
 Flask==2.2.2
+iniconfig==2.0.0
+isort==5.12.0
 itsdangerous==2.1.2
 Jinja2==3.1.2
-MarkupSafe==2.1.1
-Werkzeug==2.2.2
+lazy-object-proxy==1.9.0
+MarkupSafe==2.1.3
+mccabe==0.7.0
+mypy-extensions==1.0.0
+packaging==23.1
+pathspec==0.11.2
+platformdirs==3.10.0
+pluggy==1.3.0
+pylint==2.17.5
+pytest==7.4.2
+tomlkit==0.12.1
+Werkzeug==2.3.7
+wrapt==1.15.0
