--- a/requirements.txt
+++ b/requirements.txt
@@ -1,34 +1,36 @@
-astroid==2.13.2
-black==22.12.0
-click==8.1.3
+astroid==2.15.6
+black==23.9.1
+click==8.1.7
 colorama==0.4.6
-cssbeautifier==1.14.7
-dill==0.3.6
-djlint==1.19.11
+cssbeautifier==1.14.9
+dill==0.3.7
+djlint==1.33.0
 EditorConfig==0.12.3
-Flask==2.2.2
+Flask==2.2.5
 html-tag-names==0.1.2
 html-void-elements==0.1.0
-importlib-metadata==6.0.0
-isort==5.11.4
+iniconfig==2.0.0
+isort==5.12.0
 itsdangerous==2.1.2
 Jinja2==3.1.2
-jsbeautifier==1.14.7
+jsbeautifier==1.14.9
+json5==0.9.14
 lazy-object-proxy==1.9.0
-MarkupSafe==2.1.1
+MarkupSafe==2.1.3
 mccabe==0.7.0
-mypy-extensions==0.4.3
-pathspec==0.10.3
-platformdirs==2.6.2
-pylint==2.15.10
+mypy-extensions==1.0.0
+packaging==23.1
+pathspec==0.11.2
+platformdirs==3.10.0
+pluggy==1.3.0
+pylint==2.17.5
 PyMySQL==1.0.2
-python-dotenv==0.21.0
-PyYAML==6.0
-regex==2022.10.31
+pytest==7.4.2
+python-dotenv==1.0.0
+PyYAML==6.0.1
+regex==2023.8.8
 six==1.16.0
-tomlkit==0.11.6
-tqdm==4.64.1
-typing_extensions==4.4.0
-Werkzeug==2.2.2
-wrapt==1.14.1
-zipp==3.11.0
+tomlkit==0.12.1
+tqdm==4.66.1
+Werkzeug==2.3.7
+wrapt==1.15.0
