--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,20 @@
 astroid==2.15.6
 black==23.9.1
 click==8.1.7
+colorama==0.4.6
+cssbeautifier==1.14.9
 dill==0.3.7
-Flask==2.2.2
+djlint==1.33.0
+EditorConfig==0.12.3
+Flask==2.2.5
+html-tag-names==0.1.2
+html-void-elements==0.1.0
 iniconfig==2.0.0
 isort==5.12.0
 itsdangerous==2.1.2
 Jinja2==3.1.2
+jsbeautifier==1.14.9
+json5==0.9.14
 lazy-object-proxy==1.9.0
 MarkupSafe==2.1.3
 mccabe==0.7.0
@@ -17,6 +25,10 @@ platformdirs==3.10.0
 pluggy==1.3.0
 pylint==2.17.5
 pytest==7.4.2
+PyYAML==6.0.1
+regex==2023.8.8
+six==1.16.0
 tomlkit==0.12.1
+tqdm==4.66.1
 Werkzeug==2.3.7
 wrapt==1.15.0
